Refactor NotificationService: reemplazar excepciones genéricas por NotificationNotFoundException y UserNotFoundException para mejorar el manejo de errores; agregar clases NotificationNotFoundException y UserNotFoundException.